cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_58.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/ofb64enc.c:56: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/ofb64enc.c:56:9: Write of unused value
54.           iv = &(*ivec)[0];
55.           l2c(v0, iv);
56.           l2c(v1, iv);
              ^
57.       }
58.       t = v0 = v1 = ti[0] = ti[1] = 0;
